SUSTech/CS323/project/test/test_1/test_eVtK4Nxz.out
Error type B at Line 2: Missing semicolon ';'
Error type A at Line 3: unknown lexeme 2e5
Error type B at Line 5: Missing closing parenthesis ')'
