SUSTech/CS323/project/test/test_1/test_eVtK4Nxz.spl
int test_11711116_2(){
    int a = 0
    int b = 2e5;
    if(2 == 1
        return 0;
}